Use Copperplate as the primary display font to match coming logo Top menu takes up the entire width of the context box using CSS flex layout Adjust metadata infobox positioning to avoid thumbnails being cut off.

--- a/css/sass/_base.scss
+++ b/css/sass/_base.scss
@@ -3,8 +3,8 @@
 $base-font-size: 12px;
 $base-line-height: 18px;
 
-$title-stack: 'Playfair Display', "Palatino Linotype", "Book Antiqua", "Times New Roman", Times, serif;
-$header-stack: 'Playfair Display SC','Playfair Display', "Palatino Linotype", "Book Antiqua", "Times New Roman", Times, serif;
+$title-stack: 'Copperplate', 'Playfair Display', "Palatino Linotype", "Book Antiqua", "Times New Roman", Times, serif;
+$header-stack: 'Copperplate', 'Playfair Display', "Palatino Linotype", "Book Antiqua", "Times New Roman", Times, serif;
 $minor-header-stack: Raleway, Verdana, sans-serif;
 $base-font-stack: Raleway, Verdana, sans-serif;
 $monospace-stack: 'Courier New',Courier,'Lucida Sans Typewriter','Lucida Typewriter',monospace;
