--- a/css/sass/_screen.scss
+++ b/css/sass/_screen.scss
@@ -173,9 +173,9 @@ header {
     width: 50%;
     font-weight: 700;
     font-family: $title-stack;
-    letter-spacing: -.1ex;
+    font-variant: small-caps;
+    letter-spacing: .1ex;
     color: $light-border;
-    text-transform: uppercase;
     font-size: 5 * $base-font-size;
     line-height: 90%;
     position: relative;
@@ -359,14 +359,17 @@ header {
     clear: both;
     @include container;
     z-index: 50;
+    border: 1px solid $light-border;
+    background-color: $light-background;
 
     /* mega menu list */
     .nav-menu {
-        display: block;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
         position: relative;
+        width: 100%;
         list-style: none;
-        margin: 0 0 0 -1px;
-        padding: 0 0 0 1px;
         z-index: 15;
     }
 
@@ -391,10 +394,6 @@ header {
         float: left;
         position: relative;
         overflow: visible;
-
-        &:first-child > a {
-            border-left: 1px solid $light-border;
-        }
     }
 
     /* first descendant link within a top level navigation item */
@@ -402,7 +401,6 @@ header {
         position: relative;
         display: inline-block;
         margin: 0 0 -1px 0;
-        border: 1px solid $light-border;
     }
 
     .nav-item:not(:first-child) > a {
@@ -489,7 +487,6 @@ header {
         text-decoration: none;
         display: block;
         padding: rhythm(.5) 18px;
-        background: $light-background;
     }
 
     a:hover,
